--- a/my-app/package.json
+++ b/my-app/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^16.13.1",
     "react-is": "^16.13.1",
     "react-scripts": "3.4.1",
+    "react-scroll-to": "^3.0.0-beta.6",
     "styled-components": "^5.1.0"
   },
   "scripts": {
