--- a/my-app/package.json
+++ b/my-app/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.1.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-hamburger-menu": "^1.2.1",
     "react-is": "^16.13.1",
     "react-scripts": "3.4.1",
     "react-scroll-to": "^3.0.0-beta.6",
