--- a/my-app/package.json
+++ b/my-app/package.json
@@ -6,12 +6,14 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-hamburger-menu": "^1.2.1",
     "react-is": "^16.13.1",
     "react-scripts": "3.4.1",
     "react-scroll-to": "^3.0.0-beta.6",
+    "scss": "^0.2.4",
     "styled-components": "^5.1.0"
   },
   "scripts": {
