--- a/my-app/package.json
+++ b/my-app/package.json
@@ -13,7 +13,9 @@
     "react-is": "^16.13.1",
     "react-scripts": "3.4.1",
     "react-scroll-to": "^3.0.0-beta.6",
+    "react-slick": "^0.27.4",
     "scss": "^0.2.4",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.1.0"
   },
   "scripts": {
