--- a/my-app/package.json
+++ b/my-app/package.json
@@ -16,7 +16,8 @@
         "react-slick": "^0.27.4",
         "scss": "^0.2.4",
         "slick-carousel": "^1.8.1",
-        "styled-components": "^5.1.0"
+        "styled-components": "^5.1.0",
+        "use-force-update": "^1.0.7"
     },
     "scripts": {
         "start": "react-scripts start",
