modal abrindo e fechando]

--- a/my-app/package.json
+++ b/my-app/package.json
@@ -8,11 +8,14 @@
         "@testing-library/user-event": "^7.1.2",
         "node-sass": "^4.14.1",
         "react": "^16.13.1",
+        "react-context-hook": "^2.2.0",
         "react-dom": "^16.13.1",
         "react-hamburger-menu": "^1.2.1",
         "react-is": "^16.13.1",
+        "react-modal": "^3.11.2",
         "react-scripts": "3.4.1",
         "react-scroll-to": "^3.0.0-beta.6",
+        "react-singleton-hook": "^3.0.141",
         "react-slick": "^0.27.4",
         "scss": "^0.2.4",
         "slick-carousel": "^1.8.1",
